# eigsep_mock_analysis

./: .gitignore  .release-please-manifest.json  CLAUDE.md  README.md  Untitled.ipynb  Untitled1.ipynb  linear_mapmaking.ipynb  pyproject.toml  release-please-config.json
.github/workflows/: eigsim-test.yml  lint.yml  release-please.yml  rotis-test.yml
data_challenges/: Untitled.ipynb  new_antenna.ipynb  sim3_nov25.ipynb
data_challenges/sim3/: beam_analysis.ipynb  beam_mapping.ipynb  beam_validation.ipynb
eigsim/: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
eigsim/scripts/: hp2mwss.py  run_canonical_sim.py
eigsim/src/eigsim/: __init__.py  config.py  data.py  noise.py  rotations.py  simulate.py
eigsim/src/eigsim/configs/: eigsep.yaml
eigsim/tests/: test_noise.py  test_regression.py  test_rotations.py
notebooks/: cryofunk.ipynb  fisher_analysis.ipynb
notebooks/data_challenges/: sim3_nov25.ipynb
notebooks/data_challenges/sim3/: fitting.ipynb
notebooks/spatial_filter/: sky_sims_freespace.ipynb  sky_sims_horizon.ipynb
rotis/: CHANGELOG.md  CLAUDE.md  PROBLEM_STATEMENT.md  README.md  pyproject.toml
rotis/memo/: aastex631.cls  sample631.tex
rotis/src/rotis/: __init__.py  fisher.py
rotis/tests/: conftest.py  test_fisher.py
spatial_filter/: free_space.ipynb  sky_sims_freespace.ipynb  spatial_filter_alm.ipynb
