[project]
name = "eigsep-mock-analysis"
version = "0.0.0"
description = "Simulation and analysis workspace for the EIGSEP experiment"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["eigsim", "rotis"]

[tool.uv.sources]
eigsim = { workspace = true }
rotis = { workspace = true }

[dependency-groups]
dev = [
    "eigsim",
    "jupyter",
    "matplotlib",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "rotis",
    "ruff",
]

[tool.ruff]
line-length = 88
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["eigsim/tests", "rotis/tests"]
