[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rotis"
version = "0.0.1"
description = "Joint beam and sky inference for the EIGSEP experiment"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "eigsim",
    "jax",
    "jaxlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rotis"]
